--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,11 @@
 {
   "name": "cerad/symfony",
+  "type": "library",
+  "description": "My Symfony Tweaks",
+  "license": "MIT",
 
   "require": {
-    "php": "^7.4.4",
+    "php": ">=7.4.4",
     "symfony/routing": "^5.1",
     "symfony/config": "^5.1",
     "symfony/http-foundation": "^5.1"
