--- a/composer.json
+++ b/composer.json
@@ -8,10 +8,14 @@
     "php": ">=7.4.4",
     "symfony/routing": "^5.1",
     "symfony/config": "^5.1",
-    "symfony/http-foundation": "^5.1"
+    "symfony/http-foundation": "^5.1",
+    "symfony/dependency-injection": "^5.1",
+    "symfony/http-kernel": "^5.1"
   },
   "autoload": {
     "psr-4": {
+      "App\\": "src/App/",
+      "Symfony\\Component\\HttpKernel\\": "src/HttpKernel/",
       "Symfony\\Component\\Routing\\": "src/Routing/"
     }
   },
