--- a/composer.json
+++ b/composer.json
@@ -10,15 +10,13 @@
     "symfony/config": "^5.1",
     "symfony/http-foundation": "^5.1",
     "symfony/dependency-injection": "^5.1",
-    "symfony/http-kernel": "^5.1"
+    "symfony/http-kernel": "^5.1",
+    "twig/twig": "^3.0"
   },
   "autoload": {
     "psr-4": {
       "App\\": "src/App/",
-      "Cerad\\": "src/Cerad/",
-      "Symfony\\Component\\HttpKernel\\": "src/HttpKernel/",
-      "Symfony\\Component\\Routing\\": "src/Routing/",
-      "Doctrine\\ORM\\": "src/Doctrine/ORM/"
+      "Cerad\\": "src/Cerad/"
     },
     "exclude-from-classmap": [
       "/vendor/cerad/symfony/src/App/"
